--- a/src/public/scss/_chat.scss
+++ b/src/public/scss/_chat.scss
@@ -41,7 +41,6 @@ html, body {
 ul {
     float: left;
     display: inline-block;
-    overflow: auto;
     width: 85%;
     padding-left:0px;
     list-style-type: none;
@@ -61,10 +60,14 @@ ul {
 }
 
 aside {
-    position: fixed;
+    position:fixed;
     text-align: right;
+    overflow:hidden;
     right: 1em;
     width: 10em;
+    top: 1em;
+    bottom: 5em;
+
 }
 textarea {
   position: fixed;
